syntax = "proto3";

package users;

option go_package = "./users";

import "google/protobuf/empty.proto";

service Users {
    rpc GetUser (google.protobuf.Empty) returns (UserResponse);
    rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
    rpc GetAllUsers (google.protobuf.Empty) returns (GetAllUsersResponse);

}

message GetUserByIdRequest {
    string id = 1;
}

message RegisterUserRequest {
    string email = 1;
    string password = 2;
    string phone_number = 3;
    string first_name = 4;
    string last_name = 5;
    string locale = 6;
}

message UpdateUserRequest {
    string id = 1;
    string email = 2;
    string password = 3;
    string phone_number = 4;
    string first_name = 5;
    string last_name = 6;
    string locale = 7;
}

message GetAllUsersResponse {
    repeated User users = 1;
}

message RegisterUserResponse {
    string id = 1;
}

message UserResponse {
    int64 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
    string locale = 7;
}

message User {
    int64 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
    string locale = 7;
}